--- a/external/opensearch/pom.xml
+++ b/external/opensearch/pom.xml
@@ -105,5 +105,11 @@ under the License.
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
