--- a/external/solr/pom.xml
+++ b/external/solr/pom.xml
@@ -55,6 +55,12 @@ under the License.
 		</dependency>
 
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.stormcrawler</groupId>
 			<artifactId>stormcrawler-core</artifactId>
 			<version>${project.version}</version>
