--- a/pom.xml
+++ b/pom.xml
@@ -645,6 +645,7 @@ under the License.
 		<module>external/langid</module>
 		<module>external/opensearch</module>
 		<module>external/playwright</module>
+		<module>external/selenium</module>
 		<module>external/solr</module>
 		<module>external/sql</module>
 		<module>external/tika</module>
