--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,8 @@ under the License.
 		<slf4j-simple.version>2.0.17</slf4j-simple.version>
 		<jetbrains.annotations.version>26.0.2-1</jetbrains.annotations.version>
 		<commons.io.version>2.17.0</commons.io.version>
+        <commons.compress.version>1.28.0</commons.compress.version>
+        <commons.codec.version>1.19.0</commons.codec.version>
 		<git-code-format-maven-plugin.version>5.3</git-code-format-maven-plugin.version>
 		<testcontainers.version>1.21.3</testcontainers.version>
 		<maven.mojo.license.plugin>2.6.0</maven.mojo.license.plugin>
@@ -633,6 +635,18 @@ under the License.
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>${commons.compress.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
+            </dependency>
 
 		</dependencies>
 	</dependencyManagement>
