#1698 OpenSearch: Make waitAck cache configurable via cache specifica… (#1700)
* #1698 OpenSearch: Make waitAck cache configurable via cache specification

This commit replaces the hardcoded waitAck Caffeine cache configuration
in StatusUpdaterBolt with a configurable cache specification string.
It introduces the parameter `opensearch.status.waitack.cache.spec`,
allowing users to control cache behavior (size, expiration) via config.

* #1698 OpenSearch: add TestCase

* #1698 OpenSearch: add TestCase

* #1698 OpenSearch: code formatting

* #1698 apply code cleanup and config adjustments

- update expireAfterWrite duration
- avoid star imports
- restore previous test code
- remove Korean comments
- delete unclear test case

* #1698 align waitAck cache TTL with Storm message timeout

* #1698 remove unnecessary maximumSize limit from waitAck cache

* #1698 specify Locale.ROOT in String.format to avoid forbidden API violation

* #1698 Revert import statement changes

--- a/external/opensearch/opensearch-conf.yaml
+++ b/external/opensearch/opensearch-conf.yaml
@@ -114,6 +114,10 @@ config:
   opensearch.status.recentDate.increase: -1
   opensearch.status.recentDate.min.gap: -1
 
+  # Caffeine cache specification for the waitAck cache used in StatusUpdaterBolt.
+  # If not set, the value of topology.message.timeout.secs is used for expireAfterWrite (default: 300s)
+  # opensearch.status.waitack.cache.spec: "maximumSize=10000,expireAfterWrite=300s"
+
   topology.metrics.consumer.register:
        - class: "org.apache.stormcrawler.opensearch.metrics.MetricsConsumer"
          parallelism.hint: 1
