--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,8 @@ under the License.
 		<git-code-format-maven-plugin.version>5.4</git-code-format-maven-plugin.version>
 		<testcontainers.version>1.21.3</testcontainers.version>
 		<maven.mojo.license.plugin>2.7.0</maven.mojo.license.plugin>
+		<checkstyle-maven-plugin.version>3.6.0</checkstyle-maven-plugin.version>
+		<checkstyle.version>12.0.1</checkstyle.version>
 		<jacoco.maven.plugin>0.8.14</jacoco.maven.plugin>
 		<jacoco.haltOnFailure>false</jacoco.haltOnFailure>
 		<jacoco.classRatio>1.00</jacoco.classRatio>
@@ -465,6 +467,28 @@ under the License.
 					  </execution>
 				  </executions>
 		   </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${checkstyle-maven-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.version}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
