Added PiiBolt and PresidioRedacter implementation
Signed-off-by: Laurent Klock <Laurent.Klock@arhs-cube.com>

--- a/pom.xml
+++ b/pom.xml
@@ -692,6 +692,7 @@ under the License.
 		<module>archetype</module>
 		<module>external/opensearch/archetype</module>
 		<module>external/solr/archetype</module>
+		<module>external/presidio</module>
     </modules>
 
 </project>
